Add influx service

--- a/Luxopus/appsettings.json
+++ b/Luxopus/appsettings.json
@@ -6,15 +6,17 @@
     }
   },
   "InfluxDB": {
-    "Token": "Your_Token_Goes_Here"
+    "Token": "Your_Token_Goes_Here",
     "Server": "http://localhost:8086",
-    "Org": "mini31",
+    "Org": "mini31"
+  },
+  "LuxSettings": {
+    "Username": "RBarraclough",
+    "Password": "TopSecretPassword",
+    ",Station": "111111",
+    ",BaseAddress": "https://eu.luxpowertek.com"
   },
   "LuxopusSettings": {
-    "LuxUsername": "RBarraclough",
-    "LuxPassword": "TopSecretPassword",
-    "LuxStation": "111111",
-    "LuxBaseAddress": "https://eu.luxpowertek.com",
     "PlanLocation": "/var/lib/luxopus"
   }
 }
