Servies, jobs, cron.

--- a/Luxopus/appsettings.json
+++ b/Luxopus/appsettings.json
@@ -6,17 +6,24 @@
     }
   },
   "InfluxDB": {
-    "Token": "Your_Token_Goes_Here",
+    "Token": "token",
     "Server": "http://localhost:8086",
-    "Org": "mini31"
+    "Org": "org"
   },
-  "LuxSettings": {
-    "Username": "RBarraclough",
+  "Lux": {
+    "Username": "me",
     "Password": "TopSecretPassword",
-    ",Station": "111111",
-    ",BaseAddress": "https://eu.luxpowertek.com"
+    "Station": "111111",
+    "BaseAddress": "https://eu.luxpowertek.com"
   },
-  "LuxopusSettings": {
+  "LuxopusPlanService": {
     "PlanLocation": "/var/lib/luxopus"
+  },
+  "Email": {
+    "Server": "smtp.example.com",
+    "Username": "me@example.com",
+    "Password": "TopSecretPassword",
+    "MailFrom": "me@example.com",
+    "MailTo": "me@example.com"
   }
 }
