--- a/Luxopus/Luxopus.csproj
+++ b/Luxopus/Luxopus.csproj
@@ -33,6 +33,7 @@
     <PackageReference Include="InfluxDB.Client" Version="4.11.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
+    <PackageReference Include="NCrontab.Scheduler.AspNetCore" Version="1.1.17" />
   </ItemGroup>
 
 </Project>
