Octopus account information.

--- a/Luxopus/appsettings.json
+++ b/Luxopus/appsettings.json
@@ -25,5 +25,10 @@
     "Password": "TopSecretPassword",
     "MailFrom": "me@example.com",
     "MailTo": "me@example.com"
+  },
+  "Octopus": {
+    "ApiKey": "TopSecretApiKey",
+    "BaseAddress": "https://api.octopus.energy",
+    "AccountNumber": ""
   }
 }
