--- a/Luxopus/appsettings.json
+++ b/Luxopus/appsettings.json
@@ -30,5 +30,10 @@
     "ApiKey": "TopSecretApiKey",
     "BaseAddress": "https://api.octopus.energy",
     "AccountNumber": ""
+  },
+  "Solcast": {
+    "BaseAddress": "https://api.solcast.com.au",
+    "ApiKey": "TopSecretApiKey",
+    "SiteId": ""
   }
 }
