Solcast and some flux queries.

--- a/Luxopus/appsettings.json
+++ b/Luxopus/appsettings.json
@@ -8,7 +8,8 @@
   "InfluxDB": {
     "Token": "token",
     "Server": "http://localhost:8086",
-    "Org": "org"
+    "Org": "org",
+    "Bucket": "solar"
   },
   "Lux": {
     "Username": "me",
