--- a/Luxopus/appsettings.json
+++ b/Luxopus/appsettings.json
@@ -9,7 +9,8 @@
     "Token": "token",
     "Server": "http://localhost:8086",
     "Org": "org",
-    "Bucket": "solar"
+    "Bucket": "solar",
+    "TimeZone": "Europe/London"
   },
   "Lux": {
     "Username": "me",
