--- a/Luxopus/Luxopus.csproj
+++ b/Luxopus/Luxopus.csproj
@@ -30,6 +30,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="InfluxQueries\DaytimeBuyMin" />
+    <None Remove="InfluxQueries\DaytimeSellMedian" />
+    <None Remove="InfluxQueries\EveningSellMAx" />
+    <None Remove="InfluxQueries\ForecastFactor" />
+    <None Remove="InfluxQueries\MorningSellMax" />
+    <None Remove="InfluxQueries\OvernightMin" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="InfluxDB.Client" Version="4.11.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
