--- a/Rwb.Luxopus.Console/appsettings.json
+++ b/Rwb.Luxopus.Console/appsettings.json
@@ -18,7 +18,7 @@
     "Station": "111111",
     "BaseAddress": "https://eu.luxpowertek.com"
   },
-  "LuxopusPlanService": {
+  "LuxopusPlan": {
     "PlanLocation": "/var/lib/luxopus"
   },
   "Email": {
