--- a/Rwb.Luxopus.Console/appsettings.json
+++ b/Rwb.Luxopus.Console/appsettings.json
@@ -28,6 +28,11 @@
     "MailFrom": "me@example.com",
     "MailTo": "me@example.com"
   },
+  "Sms": {
+    "Number": "",
+    "GatewayAddress": "http://192.168.42.129:8082",
+    "Password": "TopSecretPassword"
+  }
   "Octopus": {
     "ApiKey": "TopSecretApiKey",
     "BaseAddress": "https://api.octopus.energy",
