--- a/Rwb.Luxopus.Console/Rwb.Luxopus.Console.csproj
+++ b/Rwb.Luxopus.Console/Rwb.Luxopus.Console.csproj
@@ -15,6 +15,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="appsettings - Copy.linux.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <DependentUpon>appsettings.json</DependentUpon>
+    </Content>
     <Content Include="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -22,6 +26,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <DependentUpon>appsettings.json</DependentUpon>
     </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="appsettings - Copy.json" />
+    <None Remove="appsettings - Copy.linux.json" />
+    <None Remove="appsettings.linux.json" />
   </ItemGroup>
 
   <ItemGroup>
