--- a/Rwb.Luxopus.Console/appsettings.json
+++ b/Rwb.Luxopus.Console/appsettings.json
@@ -16,7 +16,8 @@
     "Username": "me",
     "Password": "TopSecretPassword",
     "Station": "111111",
-    "BaseAddress": "https://eu.luxpowertek.com"
+    "BaseAddress": "https://eu.luxpowertek.com",
+    "TimeZone": "Europe/London"
   },
   "LuxopusPlan": {
     "PlanLocation": "/var/lib/luxopus"
