Running on linux.

--- a/Rwb.Luxopus.Console/Properties/launchSettings.json
+++ b/Rwb.Luxopus.Console/Properties/launchSettings.json
@@ -11,6 +11,12 @@
       "environmentVariables": {
         "DOTNET_ENVIRONMENT": "laptop"
       }
+    },
+    "Luxopus (linux)": {
+      "commandName": "Project",
+      "environmentVariables": {
+        "DOTNET_ENVIRONMENT": "linux"
+      }
     }
   }
 }
