--- a/Rwb.Luxopus.Console/appsettings.json
+++ b/Rwb.Luxopus.Console/appsettings.json
@@ -20,7 +20,7 @@
     "TimeZone": "Europe/London"
   },
   "LuxopusPlan": {
-    "PlanLocation": "/var/lib/luxopus"
+    "PlanLocation": "/var/opt/luxopus"
   },
   "Email": {
     "Server": "smtp.example.com",
