--- a/Rwb.Luxopus.Console/appsettings.json
+++ b/Rwb.Luxopus.Console/appsettings.json
@@ -43,5 +43,9 @@
     "BaseAddress": "https://api.solcast.com.au",
     "ApiKey": "TopSecretApiKey",
     "SiteId": ""
+  },
+  "Sun": {
+    "Latitude": 0,
+    "Longitude": 0
   }
 }
