--- a/Rwb.Luxopus.Console/Rwb.Luxopus.Console.csproj
+++ b/Rwb.Luxopus.Console/Rwb.Luxopus.Console.csproj
@@ -28,4 +28,8 @@
     <ProjectReference Include="..\Rwb.Luxopus\Rwb.Luxopus.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
+  </ItemGroup>
+
 </Project>
