--- a/Rwb.Luxopus.Systemd/Rwb.Luxopus.Systemd.csproj
+++ b/Rwb.Luxopus.Systemd/Rwb.Luxopus.Systemd.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
