Discharge gaps. Openweathermap.

--- a/Rwb.Luxopus.Console/appsettings.json
+++ b/Rwb.Luxopus.Console/appsettings.json
@@ -47,5 +47,10 @@
   "Sun": {
     "Latitude": 91,
     "Longitude": 181
+  },
+  "Openweathermap": {
+    "Latitude": 91,
+    "Longitude": 181,
+    "ApiKey": "TopSecretApiKey"
   }
 }
