--- a/Rwb.Luxopus/Rwb.Luxopus.csproj
+++ b/Rwb.Luxopus/Rwb.Luxopus.csproj
@@ -19,8 +19,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="InfluxQueries\BatteryMinimumYesterday" />
     <None Remove="InfluxQueries\DaytimeBuyMin" />
     <None Remove="InfluxQueries\DaytimeSellMedian" />
+    <None Remove="InfluxQueries\DischargeAchievedYesterday" />
     <None Remove="InfluxQueries\EveningSellMAx" />
     <None Remove="InfluxQueries\MorningSellMax" />
     <None Remove="InfluxQueries\OvernightMin" />
