Create some batt functions. Start of prediction service. Simplify plan checker batt guessing for now.

--- a/Rwb.Luxopus/Rwb.Luxopus.csproj
+++ b/Rwb.Luxopus/Rwb.Luxopus.csproj
@@ -29,7 +29,7 @@
     <None Remove="InfluxQueries\MorningSellMax" />
     <None Remove="InfluxQueries\OvernightMin" />
     <None Remove="InfluxQueries\SolcastFactors" />
-    <None Remove="InfluxQueries\SolcastTomorrow" />
+    <None Remove="InfluxQueries\SolcastToday" />
     <None Remove="InfluxQueries\Sunrise" />
   </ItemGroup>
 
