Battery service. Get prices earlier.

--- a/Rwb.Luxopus.Console/appsettings.json
+++ b/Rwb.Luxopus.Console/appsettings.json
@@ -52,5 +52,10 @@
     "Latitude": 91,
     "Longitude": 181,
     "ApiKey": "TopSecretApiKey"
+  },
+  "Battery": {
+    "CapacityAmpHours": 189,
+    "Voltage": 55,
+    "MexPowerWatts": 3000
   }
 }
