--- a/Rwb.Luxopus/Rwb.Luxopus.csproj
+++ b/Rwb.Luxopus/Rwb.Luxopus.csproj
@@ -32,6 +32,7 @@
     <None Remove="InfluxQueries\SolcastFactors" />
     <None Remove="InfluxQueries\SolcastToday" />
     <None Remove="InfluxQueries\Sunrise" />
+    <None Remove="InfluxQueries\Sunset" />
   </ItemGroup>
 
   <ItemGroup>
