--- a/Rwb.Luxopus.Console/appsettings.json
+++ b/Rwb.Luxopus.Console/appsettings.json
@@ -56,6 +56,10 @@
   "Battery": {
     "CapacityAmpHours": 189,
     "Voltage": 55,
-    "MaxPowerWatts": 3250
+    "MaxPowerWatts": 4000
+    // 6kW inverter https://luxpowertek.com/hybrid-inverter-lxp3-6k
+    // Max DC 8kW
+    // Max batt charge/discharge 4kW
+    // Max AC 6kW
   }
 }
