--- a/Rwb.Luxopus/Rwb.Luxopus.csproj
+++ b/Rwb.Luxopus/Rwb.Luxopus.csproj
@@ -40,7 +40,7 @@
     <PackageReference Include="InfluxDB.Client" Version="4.11.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
-    <PackageReference Include="NCrontab.Scheduler.AspNetCore" Version="1.1.17" />
+    <PackageReference Include="NCrontab.Scheduler.AspNetCore" Version="1.2.1-pre" />
   </ItemGroup>
 
 </Project>
