--- a/Rwb.Luxopus/Rwb.Luxopus.csproj
+++ b/Rwb.Luxopus/Rwb.Luxopus.csproj
@@ -26,11 +26,13 @@
     <None Remove="InfluxQueries\DaytimeBuyMin" />
     <None Remove="InfluxQueries\DaytimeSellMedian" />
     <None Remove="InfluxQueries\DischargeAchievedYesterday" />
+    <None Remove="InfluxQueries\EndOfGenerationYesterday" />
     <None Remove="InfluxQueries\EveningSellMAx" />
     <None Remove="InfluxQueries\MorningSellMax" />
     <None Remove="InfluxQueries\OvernightMin" />
     <None Remove="InfluxQueries\SolcastFactors" />
     <None Remove="InfluxQueries\SolcastToday" />
+    <None Remove="InfluxQueries\StartOfGenerationYesterday" />
     <None Remove="InfluxQueries\Sunrise" />
     <None Remove="InfluxQueries\Sunset" />
   </ItemGroup>
