--- a/Rwb.Luxopus/Rwb.Luxopus.csproj
+++ b/Rwb.Luxopus/Rwb.Luxopus.csproj
@@ -22,12 +22,12 @@
     <None Remove="InfluxQueries\BatteryGridChargeHigh" />
     <None Remove="InfluxQueries\BatteryMinimumYesterday" />
     <None Remove="InfluxQueries\BatteryMorningLow" />
-    <None Remove="InfluxQueries\BatteryUsageProfile" />
     <None Remove="InfluxQueries\DaytimeBuyMin" />
     <None Remove="InfluxQueries\DaytimeSellMedian" />
     <None Remove="InfluxQueries\DischargeAchievedYesterday" />
     <None Remove="InfluxQueries\EndOfGenerationYesterday" />
     <None Remove="InfluxQueries\EveningSellMAx" />
+    <None Remove="InfluxQueries\HourlyBatteryUse" />
     <None Remove="InfluxQueries\MorningSellMax" />
     <None Remove="InfluxQueries\OvernightMin" />
     <None Remove="InfluxQueries\SolcastFactors" />
