Discharge more if house is unoccupied.

--- a/Rwb.Luxopus/Rwb.Luxopus.csproj
+++ b/Rwb.Luxopus/Rwb.Luxopus.csproj
@@ -28,6 +28,7 @@
     <None Remove="InfluxQueries\EndOfGenerationYesterday" />
     <None Remove="InfluxQueries\EveningSellMAx" />
     <None Remove="InfluxQueries\HourlyBatteryUse" />
+    <None Remove="InfluxQueries\LastOccupied" />
     <None Remove="InfluxQueries\MorningSellMax" />
     <None Remove="InfluxQueries\OvernightMin" />
     <None Remove="InfluxQueries\SolcastFactors" />
