Absorb any generation when battery full. Start of dealing with output limit.

--- a/Rwb.Luxopus.Console/appsettings.json
+++ b/Rwb.Luxopus.Console/appsettings.json
@@ -54,7 +54,7 @@
     "ApiKey": "TopSecretApiKey"
   },
   "Battery": {
-    "CapacityAmpHours": 189,
+    "CapacityAmpHours": 163, //189,
     "Voltage": 55,
     "MaxPowerWatts": 4000
     // 6kW inverter https://luxpowertek.com/hybrid-inverter-lxp3-6k
