Log burst changes

--- a/Rwb.Luxopus.Console/appsettings.json
+++ b/Rwb.Luxopus.Console/appsettings.json
@@ -22,6 +22,9 @@
   "LuxopusPlan": {
     "PlanLocation": "/var/opt/luxopus"
   },
+  "BurstLog": {
+    "LogLocation":  "/var/opt/luxopus"
+  },
   "Email": {
     "Server": "smtp.example.com",
     "Username": "me@example.com",
