--- a/Rwb.Luxopus/Rwb.Luxopus.csproj
+++ b/Rwb.Luxopus/Rwb.Luxopus.csproj
@@ -22,7 +22,6 @@
     <None Remove="InfluxQueries\BatteryGridChargeHigh" />
     <None Remove="InfluxQueries\BatteryMinimumYesterday" />
     <None Remove="InfluxQueries\BatteryMorningLow" />
-    <None Remove="InfluxQueries\Cloud" />
     <None Remove="InfluxQueries\DaytimeBuyMin" />
     <None Remove="InfluxQueries\DaytimeSellMedian" />
     <None Remove="InfluxQueries\DischargeAchievedYesterday" />
@@ -32,11 +31,13 @@
     <None Remove="InfluxQueries\LastOccupied" />
     <None Remove="InfluxQueries\MorningSellMax" />
     <None Remove="InfluxQueries\OvernightMin" />
+    <None Remove="InfluxQueries\PredictionData" />
     <None Remove="InfluxQueries\SolcastFactors" />
     <None Remove="InfluxQueries\SolcastToday" />
     <None Remove="InfluxQueries\StartOfGenerationYesterday" />
     <None Remove="InfluxQueries\Sunrise" />
     <None Remove="InfluxQueries\Sunset" />
+    <None Remove="InfluxQueries\Weather" />
   </ItemGroup>
 
   <ItemGroup>
