--- a/Rwb.Luxopus.Console/appsettings.json
+++ b/Rwb.Luxopus.Console/appsettings.json
@@ -40,7 +40,8 @@
   "Octopus": {
     "ApiKey": "TopSecretApiKey",
     "BaseAddress": "https://api.octopus.energy",
-    "AccountNumber": ""
+    "AccountNumber": "",
+    "AdditionalTariffs": "E-1R-AGILE-FLEX-22-11-25-E,E-1R-AGILE-OUTGOING-19-05-13-E,E-1R-FLUX-EXPORT-23-02-14-E,E-1R-FLUX-IMPORT-23-02-14-E"
   },
   "Solcast": {
     "BaseAddress": "https://api.solcast.com.au",
