Move some values to settings.

--- a/Rwb.Luxopus.Console/appsettings.json
+++ b/Rwb.Luxopus.Console/appsettings.json
@@ -58,9 +58,11 @@
     "ApiKey": "TopSecretApiKey"
   },
   "Battery": {
+    "BatteryLimit": 99,
+    "MaxInversionW": 3600,
+    "MaxBatteryW": 4000,
     "CapacityAmpHours": 163, //189,
     "Voltage": 54,
-    "MaxPowerWatts": 4000
     // 6kW inverter https://luxpowertek.com/hybrid-inverter-lxp3-6k
     // Max DC 8kW
     // Max batt charge/discharge 4kW
