Indirection is always confusing.

--- a/Rwb.Luxopus.Console/Properties/launchSettings.json
+++ b/Rwb.Luxopus.Console/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "Luxopus (work)": {
       "commandName": "Project",
       "environmentVariables": {
-        "DOTNET_ENVIRONMENT": "rwb"
+        "DOTNET_ENVIRONMENT": "work"
       }
     },
     "Luxopus (laptop)": {
