--- a/Rwb.Luxopus/Rwb.Luxopus.csproj
+++ b/Rwb.Luxopus/Rwb.Luxopus.csproj
@@ -15,30 +15,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="InfluxQueries/*" />
     <EmbeddedResource Include="InfluxQueries/*" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Remove="InfluxQueries\BatteryGridChargeHigh" />
-    <None Remove="InfluxQueries\BatteryMinimumYesterday" />
-    <None Remove="InfluxQueries\BatteryMorningLow" />
-    <None Remove="InfluxQueries\DaytimeBuyMin" />
-    <None Remove="InfluxQueries\DaytimeSellMedian" />
-    <None Remove="InfluxQueries\DischargeAchievedYesterday" />
-    <None Remove="InfluxQueries\EndOfGeneration" />
-    <None Remove="InfluxQueries\EveningSellMAx" />
-    <None Remove="InfluxQueries\HourlyBatteryUse" />
-    <None Remove="InfluxQueries\LastOccupied" />
-    <None Remove="InfluxQueries\MorningSellMax" />
-    <None Remove="InfluxQueries\OvernightMin" />
-    <None Remove="InfluxQueries\PredictionData" />
-    <None Remove="InfluxQueries\PredictionData2" />
-    <None Remove="InfluxQueries\SolcastFactors" />
-    <None Remove="InfluxQueries\SolcastToday" />
-    <None Remove="InfluxQueries\StartOfGeneration" />
-    <None Remove="InfluxQueries\Sunrise" />
-    <None Remove="InfluxQueries\Sunset" />
-    <None Remove="InfluxQueries\Weather" />
   </ItemGroup>
 
   <ItemGroup>
