Tidy up experiments. Make planner, checker, and burst handler configurable.

--- a/Rwb.Luxopus.Console/appsettings.json
+++ b/Rwb.Luxopus.Console/appsettings.json
@@ -12,6 +12,11 @@
     "Bucket": "solar",
     "TimeZone": "Europe/London"
   },
+  "Luxopus": {
+    "Plan": "NullJob",
+    "Check": "NullJob",
+    "Burst": "NullJob"
+  },
   "Lux": {
     "Username": "me",
     "Password": "TopSecretPassword",
@@ -23,7 +28,7 @@
     "PlanLocation": "/var/opt/luxopus"
   },
   "BurstLog": {
-    "LogLocation":  "/var/opt/luxopus"
+    "LogLocation": "/var/opt/luxopus"
   },
   "Email": {
     "Server": "smtp.example.com",
@@ -62,7 +67,7 @@
     "MaxInversionW": 3600,
     "MaxBatteryW": 4000,
     "CapacityAmpHours": 163, //189,
-    "Voltage": 54,
+    "Voltage": 54
     // 6kW inverter https://luxpowertek.com/hybrid-inverter-lxp3-6k
     // Max DC 8kW
     // Max batt charge/discharge 4kW
