--- a/Rwb.Luxopus.Console/appsettings.json
+++ b/Rwb.Luxopus.Console/appsettings.json
@@ -67,7 +67,9 @@
     "MaxInversionW": 3600,
     "MaxBatteryW": 4000,
     "CapacityAmpHours": 189, //163,
-    "Voltage": 53
+    "Voltage": 55
+    // Witnessed import 5.3 less use of 0.5 take battery from 8% to 54%.
+    // Therefore voltage should be 55.2
     // 6kW inverter https://luxpowertek.com/hybrid-inverter-lxp3-6k
     // Max DC 8kW
     // Max batt charge/discharge 4kW
