Simple at. Reschedule getting prices if no prices were got. Remove some unused code.

--- a/Rwb.Luxopus.Console/appsettings.json
+++ b/Rwb.Luxopus.Console/appsettings.json
@@ -63,7 +63,7 @@
     "ApiKey": "TopSecretApiKey"
   },
   "Battery": {
-    "BatteryLimit": 100,
+    "BatteryMinimumLimit": 8,
     "MaxInversionW": 3600,
     "MaxBatteryW": 4000,
     "CapacityAmpHours": 189, //163,
