Fill your boots?

--- a/Rwb.Luxopus.Console/appsettings.json
+++ b/Rwb.Luxopus.Console/appsettings.json
@@ -67,7 +67,7 @@
     "MaxInversionW": 3600,
     "MaxBatteryW": 4000,
     "CapacityAmpHours": 189, //163,
-    "Voltage": 50 // Standard 51.2V but stated capacity 3.2kWh therefore 189Ah => 50.8V
+    "Voltage": 50, // Standard 51.2V but stated capacity 3.2kWh therefore 189Ah => 50.8V
     // Witnessed import 5.3 less use of 0.5 take battery from 8% to 54%.
     // Witnessed import of 9.8 (use estimate 1.5) take battery from 4% to 88%.
     // Therefore voltage should be 55.2
@@ -75,6 +75,6 @@
     // Max DC 8kW
     // Max batt charge/discharge 4kW
     // Max AC 6kW 
-
+    "Efficiency":  96
   }
 }
