--- a/Rwb.Luxopus.Console/appsettings.json
+++ b/Rwb.Luxopus.Console/appsettings.json
@@ -65,7 +65,7 @@
     "BatteryMinimumLimit": 8,
     "MaxInversionW": 3600,
     "MaxBatteryW": 4000,
-    "CapacityAmpHours": 189, //163,
+    "CapacityAmpHours": 315, //163, 189, 315
     "Voltage": 50 // Standard 51.2V but stated capacity 3.2kWh therefore 189Ah => 50.8V
     // Witnessed import 5.3 less use of 0.5 take battery from 8% to 54%.
     // Witnessed import of 9.8 (use estimate 1.5) take battery from 4% to 88%.
