Do not try to get prices for defunct or non-existent tariffs.

--- a/Rwb.Luxopus.Console/appsettings.json
+++ b/Rwb.Luxopus.Console/appsettings.json
@@ -45,7 +45,7 @@
     "ApiKey": "TopSecretApiKey",
     "BaseAddress": "https://api.octopus.energy",
     "AccountNumber": "",
-    "AdditionalTariffs": "E-1R-AGILE-FLEX-22-11-25-E,E-1R-AGILE-24-10-01-E,E-1R-AGILE-OUTGOING-19-05-13-E,E-1R-FLUX-EXPORT-23-02-14-E,E-1R-FLUX-IMPORT-23-02-14-E"
+    "AdditionalTariffs": "E-1R-AGILE-24-10-01-E,E-1R-AGILE-OUTGOING-19-05-13-E,E-1R-FLUX-EXPORT-23-02-14-E,E-1R-FLUX-IMPORT-23-02-14-E"
   },
   "Solcast": {
     "BaseAddress": "https://api.solcast.com.au",
@@ -74,5 +74,10 @@
     // Max DC 8kW
     // Max batt charge/discharge 4kW
     // Max AC 6kW 
+  },
+  "Hanchu": {
+    "BaseAddress": "https://iess3.hanchuess.com",
+    "Username": "me",
+    "Password": "TopSecretPassword"
   }
 }
